[tool.poetry]
name = "fast-dash"
version = "0.1.0"
description = "This is a fork of the dmc-docs-main used to quickly template apps"
authors = ["Kyle Norman <knorman006@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<=3.12"
dash = "^2.0.0"
dash-iconify = "^0.1.0"
requests = "^2.27.1"
python-frontmatter = "^1.0.0"
dash-mantine-components = "^0.14"
markdown2dash = "^0.1"
pydantic = "^2.3.0"
gunicorn = "^21.2.0"
pandas = "^2.2.3"
dash-cytoscape = "^1.0.2"
dagster = "^1.9.0"
dagster-webserver = "^1.9.0"
matplotlib = "^3.9.2"
dataclasses-json = "^0.6.7"
duckdb = "^1.1.3"
pillow = "^11.0.0"
jsonpath-ng = "^1.7.0"
streamlit = "^1.40.1"
streamlit-file-browser = "^3.2.22"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^21.12b0"

[tool.poetry.scripts]
app = "fast_dash.run:main"

[tool.dagster]
modules = [{ type = "module", name = "pipes.quickstart_etl.definitions" }]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
